--- a/ch06/Methods/Methods.csproj
+++ b/ch06/Methods/Methods.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Constructors.cs" />
+    <Compile Include="MainAgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
