--- a/ch08/Generics_r/Generics.csproj
+++ b/ch08/Generics_r/Generics.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TryMethod.cs" />
+    <Compile Include="StructBasic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
