--- a/ch07/Polymorphism/Polymorphism.csproj
+++ b/ch07/Polymorphism/Polymorphism.csproj
@@ -46,7 +46,7 @@
     <Compile Include="Animal.cs" />
     <Compile Include="Cat.cs" />
     <Compile Include="Dog.cs" />
-    <Compile Include="Program_ToString_overwriting.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
