--- a/ch10/ExceptionBasic/ExceptionBasic.csproj
+++ b/ch10/ExceptionBasic/ExceptionBasic.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TryCatch.cs" />
+    <Compile Include="Finally.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
