--- a/ch11/DElegateRand/DElegateRand.csproj
+++ b/ch11/DElegateRand/DElegateRand.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DElegateOparatop - Copy.cs" />
+    <Compile Include="ThreadBasic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
