--- a/ch12/LinqBasic/LinqBasic.csproj
+++ b/ch12/LinqBasic/LinqBasic.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LinqProduct.cs" />
+    <Compile Include="LinqXml.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
